pulse/share/pulse/examples/dice/cbor/extern/CBOR.h

#define CBOR_MAJOR_TYPE_SIMPLE_VALUE (7U)
#define CBOR_MAJOR_TYPE_UINT64 (0U)
#define CBOR_MAJOR_TYPE_NEG_INT64 (1U)
#define CBOR_MAJOR_TYPE_BYTE_STRING (2U)
#define CBOR_MAJOR_TYPE_TEXT_STRING (3U)
#define CBOR_MAJOR_TYPE_ARRAY (4U)
#define CBOR_MAJOR_TYPE_MAP (5U)
#define CBOR_MAJOR_TYPE_TAGGED (6U)
typedef struct cbor_int_s
{
  uint8_t cbor_int_type;
  uint64_t cbor_int_value;
}
cbor_int;
typedef struct cbor_string_s
{
  uint8_t cbor_string_type;
  uint64_t cbor_string_length;
  uint8_t *cbor_string_payload;
}
cbor_string;
typedef struct cbor_serialized_s
{
  size_t cbor_serialized_size;
  uint8_t *cbor_serialized_payload;
}
cbor_serialized;
typedef struct cbor_s cbor;
typedef struct cbor_s cbor;
typedef struct cbor_tagged0_s
{
  uint64_t cbor_tagged0_tag;
  cbor *cbor_tagged0_payload;
}
cbor_tagged0;
typedef struct cbor_s cbor;
typedef struct cbor_s cbor;
typedef struct cbor_array_s
{
  uint64_t cbor_array_length;
  cbor *cbor_array_payload;
}
cbor_array;
typedef struct cbor_map_entry_s cbor_map_entry;
typedef struct cbor_map_s
{
  uint64_t cbor_map_length;
  cbor_map_entry *cbor_map_payload;
}
cbor_map;
#define CBOR_Case_Int64 0
#define CBOR_Case_String 1
#define CBOR_Case_Tagged 2
#define CBOR_Case_Array 3
#define CBOR_Case_Map 4
#define CBOR_Case_Simple_value 5
#define CBOR_Case_Serialized 6
typedef uint8_t cbor_tags;
typedef struct cbor_s
{
  cbor_tags tag;
  union {
    cbor_int case_CBOR_Case_Int64;
    cbor_string case_CBOR_Case_String;
    cbor_tagged0 case_CBOR_Case_Tagged;
    cbor_array case_CBOR_Case_Array;
    cbor_map case_CBOR_Case_Map;
    uint8_t case_CBOR_Case_Simple_value;
    cbor_serialized case_CBOR_Case_Serialized;
  }
  ;
}
cbor;
typedef struct cbor_map_entry_s
{
  cbor cbor_map_entry_key;
  cbor cbor_map_entry_value;
}
cbor_map_entry;
#define CBOR_Array_Iterator_Payload_Array 0
#define CBOR_Array_Iterator_Payload_Serialized 1
#define CBOR_Map_Iterator_Payload_Map 0
#define CBOR_Map_Iterator_Payload_Serialized 1
extern uint64_t cbor_array_length(cbor a);
extern uint64_t cbor_map_length(cbor a);